# mobao

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: _build-desktop.yml  _build-mobile.yml  auto-tag.yml  build.yml  ci.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CharactersPanel.tsx  ConfirmDialog.tsx  ContextPanel.tsx  Editor.tsx  EditorToolbar.tsx  FullScreenReader.tsx  ImportDialog.tsx  MobileNav.tsx  Modal.tsx  NovelDialog.tsx  NovelsPanel.tsx  Outline.tsx  PlotPanel.tsx  Preview.tsx  ProjectExplorer.tsx  SearchOverlay.tsx  SeriesPanel.tsx  Sidebar.tsx  ThemeToggle.tsx  TimelinePanel.tsx  Toast.tsx  Toolbar.tsx  Tree.tsx  WorldPanel.tsx
src/components/app/: AIAssistantPanel.tsx  ContextPanel.tsx  MobileNav.tsx  Sidebar.tsx  Toolbar.tsx
src/components/common/: ContextMenu.tsx  Modal.tsx  SearchOverlay.tsx  SettingsDialog.tsx  ThemeToggle.tsx  Toast.tsx
src/components/editor/: Editor.tsx  EditorToolbar.tsx  Tree.tsx
src/components/project/: NovelDialog.tsx  (+1 more)
src/config/: brand.ts
src/contexts/: NovelContext.tsx  ProjectContext.tsx  ResponsiveContext.tsx  SettingsContext.tsx  WritingToolsContext.tsx
src/core/: index.ts  platform-capabilities.ts  platform.ts
src/hooks/: useNovel.ts  useProject.ts  useResponsive.ts  useSettings.ts  useWritingTools.ts
src/styles/: global.css
src/utils/: browserFs.ts  db.ts  fileOps.ts  helpers.ts  io.ts  store.ts
(+27 files in other folders)
